Completed interface for adding and removing a guest from an event.

--- a/browser/scss/directives/attendee-event/main.scss
+++ b/browser/scss/directives/attendee-event/main.scss
@@ -1,3 +1,7 @@
+hr {
+  margin: 0;
+}
+
 .status-attending {
  background-color: $theme-blue;
  color: $theme-tacgrey;
@@ -45,4 +49,5 @@ attendee-event {
       @include event-button-containers;
     }
   }
+
 }
