--- a/browser/scss/attendee/main.scss
+++ b/browser/scss/attendee/main.scss
@@ -1,4 +1,34 @@
 #user-profile {
   padding-top: 4em;
+  color: $theme-grey;
 
+  .attendee-announcements {
+
+    .announcement-viewer{
+      height: 66vh;
+      overflow-y: auto;
+      article {
+        border: 3px solid $theme-blue;
+        margin-bottom: 0.5em;
+        header {
+          align-items: center;
+          color: $theme-blue;
+          h4 {
+            font-weight: 900;
+            margin: 0.5em 0.5em 0.25em 0.5em;
+            flex: 1;
+          }
+
+          span {
+            flex: 1;
+          }
+        }
+
+        p {
+          padding: 0.5em;
+        }
+
+      }
+    }
+  }
 }
