--- a/browser/scss/main.scss
+++ b/browser/scss/main.scss
@@ -54,6 +54,8 @@ $theme-tacgrey: #EFEFEF;
 $fb-blue: #3B5998;
 $gg-red: rgba(218, 79, 70, 1);
 $theme-placeholder-inverse: rgba(236,237,238,0.5);
+$theme-tacgrey-transparent: rgba(239,239,239,0.75);
+$theme-blue-transparent: rgba(104,175,195,0.75);
 
 body {
   background: $theme-tacgrey;
@@ -70,6 +72,11 @@ alert {
 
 @mixin theme-shadow-default {
   box-shadow: 0px 5px 10px rgba(0,0,0,0.75);
+}
+
+@mixin scrollable-content-viewer {
+  box-shadow: 0px 5px 10px rgba(0,0,0,0.75);
+  overflow-y: auto;
 }
 
 @mixin clearHeader {
@@ -110,7 +117,7 @@ alert {
   border-radius: 0;
   text-align: left;
   transition: border 0.5s, background-color 0.5s, ease-in-out;
-  -webkit-tranisiton: border 0.5s background-color 0.5s, ease-in-out;
+  -webkit-transition: border 0.5s background-color 0.5s, ease-in-out;
   &:focus {
     outline: none;
     border: none;
