Working on styling events management substate of the management state. Also working on conversions and editing.

--- a/browser/scss/directives/_main.scss
+++ b/browser/scss/directives/_main.scss
@@ -2,3 +2,4 @@
 @import 'attendee-event/main.scss';
 @import 'add-event-guest/main.scss';
 @import 'event-guest/main.scss';
+@import 'event-modification/main.scss';
