--- a/server/app/views/index.html
+++ b/server/app/views/index.html
@@ -15,6 +15,7 @@
     <script src="/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="/angular-ui-bootstrap/ui-bootstrap.js"></script>
     <script src="/angular-ui-bootstrap/ui-bootstrap-tpls.js"></script>
+    <script src="/scripts/moment.min.js"></script>
     <script src="/main.js"></script>
   </head>
   <body ng-app="FiveSquadronRNZAFApp">
