Working on styling event management directives.

--- a/browser/scss/directives/_main.scss
+++ b/browser/scss/directives/_main.scss
@@ -3,3 +3,4 @@
 @import 'add-event-guest/main.scss';
 @import 'event-guest/main.scss';
 @import 'event-modification/main.scss';
+@import 'event-guest-limit/main.scss';
