--- a/server/app/views/index.html
+++ b/server/app/views/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" type="text/css" href="/style.css" />
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
     <script src="/lodash/index.js"></script>
-    <script src="/angular/angular.js"></script>
-    <script src="https://cdn.firebase.com/js/client/2.4.2/firebase.js"></script>
-    <script src="http://cdn.firebase.com/libs/angularfire/1.2.0/angularfire.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular.min.js"></script>
+    <script src="https://gstatic.com/firebasejs/3.0.3/firebase.js"></script>
+    <script src="http://cdn.firebase.com/libs/angularfire/2.0.0/angularfire.min.js"></script>
     <script src="/angular-animate/angular-animate.js"></script>
     <script src="/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="/angular-ui-bootstrap/ui-bootstrap.js"></script>
