--- a/browser/scss/attendee/main.scss
+++ b/browser/scss/attendee/main.scss
@@ -7,21 +7,23 @@
   }
 
   h3 {
-    @include theme-shadow-default;
     padding: 0.33em;
     font-weight: 600;
     margin-bottom: 0.1em;
+    border-top: 3px solid #808080;
   }
 
   .attendee-event-viewer {
     overflow-y: auto;
     height: auto;
+    box-shadow: 0px 10px 20px rgba(109, 109, 109, 0.75) inset;
   }
 
   .attendee-announcements {
     .announcement-viewer{
       overflow-y: auto;
       height: 66vh;
+      box-shadow: 0px 10px 20px rgba(109, 109, 109, 0.75) inset;
       article {
         border: 3px solid $theme-blue;
         margin: 0.25em 0.25em 0.5em 0.25em;
