--- a/server/app/views/index.html
+++ b/server/app/views/index.html
@@ -12,7 +12,7 @@
     <script src="https://gstatic.com/firebasejs/3.0.3/firebase.js"></script>
     <script src="http://cdn.firebase.com/libs/angularfire/2.0.1/angularfire.min.js"></script>
     <script src="/angular-animate/angular-animate.js"></script>
-    <script src="/angular-ui-router/release/angular-ui-router.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.1/angular-ui-router.min.js"></script>
     <script src="/angular-ui-bootstrap/ui-bootstrap.js"></script>
     <script src="/angular-ui-bootstrap/ui-bootstrap-tpls.js"></script>
     <script src="/scripts/moment.min.js"></script>
