--- a/browser/scss/referredNewAttendee/main.scss
+++ b/browser/scss/referredNewAttendee/main.scss
@@ -1,6 +1,8 @@
 .referred-attendee-container {
+  position: relative;
   padding-top: 4em;
   margin: 1em;
+  text-align: center;
   color: $theme-grey;
   h3 {
     margin: 0.5em;
