Styling and new event completed. Now need to complete the conditional saving on the event creation directive.

--- a/browser/scss/directives/_main.scss
+++ b/browser/scss/directives/_main.scss
@@ -4,3 +4,4 @@
 @import 'event-guest/main.scss';
 @import 'event-modification/main.scss';
 @import 'event-guest-limit/main.scss';
+@import 'event-creation/main.scss';
