--- a/browser/scss/directives/event-modification/main.scss
+++ b/browser/scss/directives/event-modification/main.scss
@@ -28,12 +28,8 @@ event-modification {
       display: inline-block;
       height: auto;
 
-      event-creation {
-        .date-selector {
-          button {
-            margin: 0.25em;
-          }
-        }
+      footer.ng-hide {
+
       }
 
     }
