--- a/browser/scss/directives/event-creation/main.scss
+++ b/browser/scss/directives/event-creation/main.scss
@@ -14,4 +14,11 @@
       margin: 0.25em;
     }
   }
+
+  .event-options {
+    text-align: center;
+    padding: 0.25em;
+    margin: 0.25em 0em 0.25em 0em;
+    background-color: $theme-grey;
+  }
 }
