--- a/browser/scss/directives/event-creation/main.scss
+++ b/browser/scss/directives/event-creation/main.scss
@@ -15,6 +15,18 @@
     }
   }
 
+  .event-blurb {
+    text-align: center;
+    padding: 0.5em;
+  }
+
+  textarea {
+    @extend .sqnInputActive;
+    border: 3px solid $theme-grey;
+    width: 90%;
+    height: auto;
+  }
+
   .event-options {
     text-align: center;
     padding: 0.25em;
