Added directive for event statistics panels for the management view.

--- a/browser/scss/directives/_main.scss
+++ b/browser/scss/directives/_main.scss
@@ -5,3 +5,4 @@
 @import 'event-modification/main.scss';
 @import 'event-guest-limit/main.scss';
 @import 'event-creation/main.scss';
+@import 'dashboard-event-panel/main.scss';
