--- a/server/app/views/index.html
+++ b/server/app/views/index.html
@@ -20,7 +20,11 @@
   </head>
   <body ng-app="FiveSquadronRNZAFApp">
     <header-bar></header-bar>
-    <div id="main" ui-view></div>
+    <div id="main" ui-view>
+      <section class="state-transition-view">
+        <h1>Loading...</h1>
+      </section>
+    </div>
   </body>
   <!-- Written and designed by F/S Sunil Unka, Air Warfare Specialist, 5 SQN, 2006-2016 -->
 </html>
