Removed extraneous console log and debugger commands. Have referred register working as well. Refactored to make eaesier to implement.

--- a/browser/scss/referredNewAttendee/main.scss
+++ b/browser/scss/referredNewAttendee/main.scss
@@ -7,4 +7,13 @@
   h3 {
     margin: 0.5em;
   }
+  
+  .registerForm {
+    height: auto;
+    h4 {
+      background-color: $theme-grey;
+      color: $theme-tacgrey;
+      padding: 0.5em;
+    }
+  }
 }
