--- a/browser/scss/directives/_main.scss
+++ b/browser/scss/directives/_main.scss
@@ -6,3 +6,4 @@
 @import 'event-guest-limit/main.scss';
 @import 'event-creation/main.scss';
 @import 'dashboard-event-panel/main.scss';
+@import 'announcement-modification/main.scss';
