--- a/browser/scss/management-announcements/main.scss
+++ b/browser/scss/management-announcements/main.scss
@@ -1,3 +1,32 @@
-/*.management-sub-menu {
+.announcements {
+  form {
+    padding: 0.5em 0.5em 0em 0.5em;
+    border: 3px solid $theme-grey;
 
-}*/
+
+    input, label {
+      margin: 0.5em auto;
+    }
+
+    label {
+      background-color: $theme-grey;
+      color: $theme-tacgrey;
+      padding: 0.25em;
+      width: 90%;
+    }
+
+    textarea {
+      @extend .sqnInputActive;
+      border: 3px solid $theme-grey;
+      width: 90%;
+      height: 10em;
+      margin: 0.5em auto;
+    }
+  }
+}
+
+.announcement-form {
+
+
+
+}
