Working on filtering users and determining other data to resolve to aid functionality.

--- a/browser/scss/directives/_main.scss
+++ b/browser/scss/directives/_main.scss
@@ -7,3 +7,4 @@
 @import 'event-creation/main.scss';
 @import 'dashboard-event-panel/main.scss';
 @import 'announcement-modification/main.scss';
+@import 'user-management-panel/main.scss';
