Working on querying firebase data for management purposes.

--- a/browser/scss/main.scss
+++ b/browser/scss/main.scss
@@ -394,3 +394,4 @@ formatted-text {
 @import 'management/main';
 @import 'management-events/main';
 @import 'management-announcements/main';
+@import 'management-users/main';
