Completed basic notification service and animations.

--- a/browser/scss/directives/_main.scss
+++ b/browser/scss/directives/_main.scss
@@ -8,3 +8,4 @@
 @import 'dashboard-event-panel/main.scss';
 @import 'announcement-modification/main.scss';
 @import 'user-management-panel/main.scss';
+@import 'notification/main.scss';
