--- a/server/app/views/index.html
+++ b/server/app/views/index.html
@@ -20,6 +20,7 @@
   </head>
   <body ng-app="FiveSquadronRNZAFApp">
     <header-bar></header-bar>
+    <notification-panel></notification-panel>
     <div id="main" ui-view>
       <section class="state-transition-view">
         <h1>Loading...</h1>
