Renamed NotificationService method to notify. Modified styling for notifications.

--- a/browser/scss/directives/notification/main.scss
+++ b/browser/scss/directives/notification/main.scss
@@ -11,7 +11,7 @@ $theme-blur: blur(0.25em);
 }
 
 .display-notification + #main {
-  @include filter-mixin($theme-blur);
+  opacity: 0.5;
 }
 
 .display-error {
