Working through setup and scoping of chat.

--- a/browser/scss/directives/_main.scss
+++ b/browser/scss/directives/_main.scss
@@ -9,3 +9,4 @@
 @import 'announcement-modification/main.scss';
 @import 'user-management-panel/main.scss';
 @import 'notification/main.scss';
+@import 'messaging/main.scss';
