Have basic user peer to peer matching logic working. Now session initialisation.

--- a/browser/scss/directives/user-management-panel/main.scss
+++ b/browser/scss/directives/user-management-panel/main.scss
@@ -3,7 +3,7 @@
   font-weight: 900;
 }
 
-user-management-panel {
+.user-management-panel, messaging-contact {
   display: block;
   width: 20em;
   margin: 0.5em;
