Have category search working in directive. Now to wire up the other two search requirements.

--- a/browser/scss/directives/_main.scss
+++ b/browser/scss/directives/_main.scss
@@ -10,3 +10,4 @@
 @import 'user-management-panel/main.scss';
 @import 'notification/main.scss';
 @import 'messaging/main.scss';
+@import 'search-options/main.scss';
