Working on how the user flow for active chats will work.

--- a/browser/scss/directives/_main.scss
+++ b/browser/scss/directives/_main.scss
@@ -11,3 +11,4 @@
 @import 'notification/main.scss';
 @import 'messaging/main.scss';
 @import 'search-options/main.scss';
+@import 'active-chat-panel/main.scss';
