--- a/browser/scss/main.scss
+++ b/browser/scss/main.scss
@@ -385,9 +385,7 @@ formatted-text {
 
 @import 'directives/main';
 @import 'home/main';
-@import 'about/main';
 @import 'login/main';
-@import 'anniversary/main';
 @import 'new-attendee/main';
 @import 'attendee/main';
 @import 'referredNewAttendee/main';
@@ -395,3 +393,4 @@ formatted-text {
 @import 'management-events/main';
 @import 'management-announcements/main';
 @import 'management-users/main';
+@import 'messaging/main';
