--- a/browser/scss/directives/active-chat-panel/main.scss
+++ b/browser/scss/directives/active-chat-panel/main.scss
@@ -1,7 +1,46 @@
+@media screen and (max-width: $screen-xxs-max){
+  active-chat-panel {
+    width: 100vw;
+  }
+}
 
+@media screen and (min-width: $screen-xs-min) and (max-width: $screen-xs-max) {
+  active-chat-panel {
+    width: 75vw;
+  }
+}
+
+@media screen and (min-width: $screen-sm-min) and (max-width: $screen-sm-max){
+  active-chat-panel{
+    width: 50vw;
+  }
+}
+
+@media screen and (min-width: $screen-md-min){
+  active-chat-panel {
+    width: 33vw;
+  }
+}
 
 active-chat-panel {
   position: fixed;
-  top: 0px;
+  top: 3.5em;
   right: 0px;
+  height: calc(100vh - 3.5em);
+  background-color: $theme-tacgrey;
+  box-shadow: -5px 0px 1em $theme-transparent-black;
+  z-index: 800;
+  padding: 1em;
+
+  chat-contact-tile {
+    width: 100%;
+    height: auto;
+    cursor: pointer;
+    div {
+      display: block;
+      padding: 0.5em;
+    }
+    &:hover {}
+  }
+
 }
