Working on adding user to group chat. Have basic redirect working for menu.

--- a/browser/scss/directives/active-chat-panel/main.scss
+++ b/browser/scss/directives/active-chat-panel/main.scss
@@ -25,6 +25,10 @@
   @include panel-responsive-dimensions(25vw);
 }
 
+/*.group-private {
+  background-color: rgba()
+}*/
+
 .chat-user-online {
   background-color: $theme-green;
 }
