--- a/server/app/views/index.html
+++ b/server/app/views/index.html
@@ -23,7 +23,10 @@
     <notification-panel></notification-panel>
     <div id="main" ui-view>
       <section class="state-transition-view">
-        <h1>Loading...</h1>
+        <h1>"Keitou Kalawaca Na Wasaliwa"</h1>
+        <div class="transition-squadron">
+          <h3>Just like waiting for the radio operator, should be ready soon...</h3>
+        </div>
       </section>
     </div>
   </body>
