--- a/browser/scss/messaging/main.scss
+++ b/browser/scss/messaging/main.scss
@@ -1,3 +1,20 @@
+.message-group-modification {
+  padding: 1.5em;
+}
+
+.messaging-state {
+  padding-top: 5em;
+  color: $theme-grey;
+}
+.new-message-group {
+  flex-grow: 1;
+  padding: 0.5em;
+}
+
+.input-inline {
+  display: inline-block;
+}
+
 #messages-view {
   height: 50vh;
   width: 90%;
