Fixed issue with user platforms directive.

--- a/browser/scss/directives/active-chat-panel/main.scss
+++ b/browser/scss/directives/active-chat-panel/main.scss
@@ -29,8 +29,8 @@
   background-color: rgba()
 }*/
 
-.chat-user-online {
-  background-color: $theme-green;
+.chat-user-online, .adding-user {
+  background-color: $theme-green !important;
 }
 
 .sqn-btn-small {
